// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderCommitDiffDetail structural snapshot — no detail 1`] = `
<Box
  borderColor="gray"
  borderStyle="round"
  flexDirection="column"
  paddingX={1}
  width={100}
>
  <Text
    bold={true}
  >
    Commit
  </Text>
  <Text
    dimColor={false}
  >
    No commit selected — j/k to browse history.
  </Text>
</Box>
`;

exports[`renderHistoryInspector structural snapshot — no detail 1`] = `
<Box
  borderColor="gray"
  borderStyle="round"
  flexDirection="column"
  paddingX={1}
  width={100}
>
  <Text
    bold={true}
  >
    Inspector
  </Text>
  <Text
    dimColor={false}
  >
    No commit selected — j/k to browse history.
  </Text>
</Box>
`;
